--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div id="box">
-        <h2>Console.log()</h2>
+        <h2 id="h2">Console.log()</h2>
         
         <input type="text" name="" id="in">
         
-        <button id="print">Print</button>
+        <button id="print">SEND</button>
     </div>
 </body>
 <script src="./app.js"></script>
